# tish

./: .gitignore  Cargo.toml  PROMPT.md  README.md  build.rs
src/: args.rs  command.rs  env.rs  jobs.rs  lua.rs  macros.rs  models.rs  os.rs  readline.rs  shell.rs  template.rs  tish.rs  tty.rs
src/cmd/: file.rs  icons.rs  ls.rs  mod.rs
src/lua/: dump.rs
src/os/: env.rs  size.rs  unsafe.rs  user.rs
src/shell/: alias.rs  git.rs  highlight.rs  signals.rs  tokenizer.rs
