[package]
name = "tish"
edition = "2021"
version = "0.5.1"
license = "GPL-3.0"
description = "A tiny, fast shell with not so tiny features"
repository = "https://github.com/theMackabu/tish"

[[bin]]
name = "tish"
path = "src/tish.rs"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
dirs = "6.0.0"
hostname = "0.4.0"
libc = "0.2.169"
nix = "0.29.0"
parking_lot = "0.12.3"
pat = "1.0.1"
regex = "1.11.1"
serde_json = "1.0.138"
sysinfo = "0.33.1"

tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
git2 = { version = "0.20.0", default-features = false }
rustyline = { version = "15.0.0", features = ["custom-bindings", "with-fuzzy"] }

[dependencies.mlua]
version = "0.10.2"
features = [
    "anyhow",
    "async",
    "lua54",
    "macros",
    "send",
    "vendored",
    "serialize",
]
